crates/aven-check/tests/fixtures/check/invalid/local-inference-mismatch.av
f = () =>
  local = 1
  value : Text = local
  value
